增加BGPIP的帮助接口类
CDB增加升级数据库引擎，创建实例功能
PayOrderHelper 改名为 UserAccountHelper
增加订单查询等多项功能
（目前“查询账单详情”不可用，因为腾讯云并未定义出传入的订单ID是什么....）

--- a/QCloudAPIHelper/QCloudAPIHelper.csproj
+++ b/QCloudAPIHelper/QCloudAPIHelper.csproj
@@ -47,10 +47,11 @@
     <Compile Include="Base\APIEnum.cs" />
     <Compile Include="Base\DateTimeHelper.cs" />
     <Compile Include="Base\QCloudHelper.cs" />
+    <Compile Include="ModulesHelper\BGPIPHelper.cs" />
     <Compile Include="ModulesHelper\CDBHelper.cs" />
     <Compile Include="ModulesHelper\CvmHelper.cs" />
     <Compile Include="ModulesHelper\MonitorHelper.cs" />
-    <Compile Include="ModulesHelper\PayOrderHelper.cs" />
+    <Compile Include="ModulesHelper\UserAccountHelper.cs" />
     <Compile Include="ModulesHelper\RedisHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
